Updated CSS Labels and also README file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
 </head>
 <body>	
 	<div class="container">
-	  <h1>HEADER</h1>
+		<section>
+			<div class="label-one">I Love CSS</div>	
+		</section>
+	  	<section>
+	  		<div class="label-two">I love HTML</div>
+	  	</section>
+	  	<section>
+	  		<div class="label-three">I love JavaScript</div>
+	  	</section>
+	  	<section>
+	  		<div class="label-four">I love PHP</div>
+	  	</section>
+	  	<section>
+	  		<div class="label-five">I love React</div>
+	  	</section>
 	</div>
 </body>
 </html>
